--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>Tic Tac Toe</h1> 
+  
   <script src="app.js"></script>
 </body>
 </html>
